[gd_scene load_steps=8 format=3 uid="uid://dmorvy7b66ore"]

[ext_resource type="Texture2D" uid="uid://dpxsk1kqqt4nm" path="res://themes/border.png" id="2_8pa1s"]
[ext_resource type="Script" path="res://ui/item_description/item_card.gd" id="2_10p6s"]
[ext_resource type="Theme" uid="uid://blkin3xm8152j" path="res://themes/game_theme.tres" id="3_c17r6"]

[sub_resource type="Animation" id="Animation_hphae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fr4dt"]
resource_name = "focused"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(-5, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0349066, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kn248"]
_data = {
"RESET": SubResource("Animation_hphae"),
"focused": SubResource("Animation_fr4dt")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_c6lj6"]

[node name="ItemDescription" type="MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(160, 210)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 160.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(80, 400)
focus_mode = 2
mouse_default_cursor_shape = 2
script = ExtResource("2_10p6s")

[node name="AnimatedControl" type="Control" parent="."]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="AnimatedControl"]
layout_mode = 2
offset_right = 160.0
offset_bottom = 210.0
texture = ExtResource("2_8pa1s")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedControl"]
root_node = NodePath("../..")
speed_scale = 10.0
libraries = {
"": SubResource("AnimationLibrary_kn248")
}

[node name="MarginContainer" type="MarginContainer" parent="AnimatedControl"]
layout_mode = 2
offset_right = 160.0
offset_bottom = 210.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="AnimatedControl/MarginContainer"]
custom_minimum_size = Vector2(140, 190)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AnimatedControl/MarginContainer/Panel"]
layout_mode = 2
offset_right = 140.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_c17r6")

[node name="LevelLabel" type="Label" parent="AnimatedControl/MarginContainer/Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_c17r6")
text = "Level 1"

[node name="NameLabel" type="Label" parent="AnimatedControl/MarginContainer/Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_c17r6")
text = "Name"

[node name="Control" type="Control" parent="AnimatedControl/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatedControl/MarginContainer/Panel/VBoxContainer/Control"]
process_mode = 3
position = Vector2(64, 52)
sprite_frames = SubResource("SpriteFrames_c6lj6")
autoplay = "default"

[node name="DescriptionLabel" type="RichTextLabel" parent="AnimatedControl/MarginContainer/Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_c17r6")
text = "Description of the item should be contained in this box"
fit_content = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
